--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.2.2",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.4"
   }
 }
